--- a/my_app/pubspec.yaml
+++ b/my_app/pubspec.yaml
@@ -28,9 +28,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  firebase_auth: ^1.0.3
-  http_parser: ^4.0.0
+  #firebase_auth: ^1.0.3
+  #http: ^0.13.1
   english_words: ^4.0.0-0
+  #flutter_openvpn: ^0.2.0
+  #dio: ^3.0.6
+  dio: ^4.0.0
 
 dev_dependencies:
   flutter_test:
