--- a/my_app/pubspec.yaml
+++ b/my_app/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   #firebase_auth: ^1.0.3
   http: ^0.13.1
   english_words: ^4.0.0-0
+  image_picker: ^0.7.4
+  #image_cropper: ^1.4.0
   #flutter_openvpn: ^0.2.0
   #dio: ^3.0.6
   #dio: ^4.0.0
