--- a/my_app/pubspec.yaml
+++ b/my_app/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   http: ^0.13.1
   english_words: ^4.0.0-0
   image_picker: ^0.7.4
+  flutter_svg: ^0.21.0+1
   #multi_image_picker: ^4.8.0
   #image_picker: ^0.7.4
   #image_cropper: ^1.4.0
