--- a/my_app/pubspec.yaml
+++ b/my_app/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   image_picker: ^0.7.4
   flutter_svg: ^0.21.0+1
   flutter_session: ^0.1.1
+  flutter_launcher_icons: ^0.9.0
   #multi_image_picker: ^4.8.0
   #image_picker: ^0.7.4
   #image_cropper: ^1.4.0
@@ -45,6 +46,10 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+flutter_icons:
+  android : true
+  ios : true
+  image_path : "images/dog.png"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
