--- a/my_app/pubspec.yaml
+++ b/my_app/pubspec.yaml
@@ -23,6 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -35,6 +37,7 @@ dependencies:
   flutter_svg: ^0.21.0+1
   flutter_session: ^0.1.1
   flutter_launcher_icons: ^0.9.0
+  flutter_sheet_localization: ^5.1.0
   #multi_image_picker: ^4.8.0
   #image_picker: ^0.7.4
   #image_cropper: ^1.4.0
@@ -64,6 +67,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
   - images/
+  - lang/language_en.json
+  - lang/language_th.json
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
