--- a/my_app/pubspec.yaml
+++ b/my_app/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_launcher_icons: ^0.9.0
   flutter_sheet_localization: ^5.1.0
   get: ^4.1.4
+  hexcolor: ^2.0.3
   #multi_image_picker: ^4.8.0
   #image_picker: ^0.7.4
   #image_cropper: ^1.4.0
