--- a/my_app/pubspec.yaml
+++ b/my_app/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_sheet_localization: ^5.1.0
   get: ^4.1.4
   hexcolor: ^2.0.3
+  dotted_border: ^2.0.0
   #multi_image_picker: ^4.8.0
   #image_picker: ^0.7.4
   #image_cropper: ^1.4.0
