--- a/my_app/pubspec.yaml
+++ b/my_app/pubspec.yaml
@@ -35,12 +35,13 @@ dependencies:
   english_words: ^4.0.0-0
   image_picker: ^0.7.4
   flutter_svg: ^0.21.0+1
-  flutter_session: ^0.1.1
+  #flutter_session: ^0.1.1
   flutter_launcher_icons: ^0.9.0
   flutter_sheet_localization: ^5.1.0
   get: ^4.1.4
   hexcolor: ^2.0.3
   dotted_border: ^2.0.0
+  permission_handler: ^8.0.1
   #multi_image_picker: ^4.8.0
   #image_picker: ^0.7.4
   #image_cropper: ^1.4.0
