--- a/my_app/android/app/build.gradle
+++ b/my_app/android/app/build.gradle
@@ -24,6 +24,7 @@ if (flutterVersionName == null) {
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 30
@@ -54,7 +55,25 @@ flutter {
     source '../..'
 }
 
-dependencies {
+// dependencies {
+//     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+//     classpath 'com.google.gms:google-services:4.3.8'
+// }
+buildscript {
+  repositories {
+    google()  // Google's Maven repository
+  }
+  dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    classpath 'com.google.gms:google-services:4.3.8'
+    implementation platform('com.google.firebase:firebase-bom:28.2.1')
+  }
 }
+
+allprojects {
+  repositories {
+    google()  // Google's Maven repository
+  }
+}
+
 apply plugin: 'com.google.gms.google-services'
